# python-microservices-demo-app

./: README.md  docker-compose.yml  main.py  next_steps.txt  pyproject.toml  test_commands.txt
auth_service/: Dockerfile  app.py  config.py  requirements.txt
config_service/: Dockerfile  app.py  config.json
nginx/: nginx.conf
order_service/: Dockerfile  app.py  app_with_auth.py  auth.py  breaker.py  producer.py  requirements.txt
payment_service/: Dockerfile  app.py  config.py  consumer.py  db.py  requirements.txt
