[project]
name = "python-microservices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.1",
    "fastapi>=0.135.1",
    "mysql-connector-python>=9.6.0",
    "pika>=1.3.2",
    "pybreaker>=1.4.1",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]
